# kube-audit-kit

./: .gitignore  EXAMPLES.md  QUICKSTART.md  README.md  README.zh.md  SETUP.md  WORKFLOW.md  audit_report_template.md  pyproject.toml
examples/: audit-service-account.yaml
scripts/: audit.py  export.py  group_apps.py  output.py  sanitize.py  utils.py
tests/: __init__.py  conftest.py  test_output.py  test_sanitize.py  test_utils.py
